diesel_compile_tests/tests/fail/right_side_of_left_join_requires_nullable.stderr
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:41:18
   |
41 |     let _ = join.select(posts::title);
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>>` to implement `SelectDsl<posts::columns::title>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:41:18
   |
41 |     let _ = join.select(posts::title);
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>>` to implement `SelectDsl<posts::columns::title>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:47:18
   |
47 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 2 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:47:18
   |
47 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 2 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:49:31
   |
49 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ----- ^^^^^^^^^^^^^^^^^^^^^^^ expected `Text`, found `Nullable<Text>`
   |                         |
   |                         required by a bound introduced by this call
   |
   = note: expected struct `diesel::sql_types::Text`
              found struct `Nullable<diesel::sql_types::Text>`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
note: required by a bound in `lower`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:33:1
   |
33 | sql_function!(fn lower(x: Text) -> Text);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`
   = note: this error originates in the macro `sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:49:25
   |
49 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Nullable<Text>`, found `Text`
   |
   = note: expected struct `Nullable<diesel::sql_types::Text>`
              found struct `diesel::sql_types::Text`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:58:18
   |
58 |     let _ = join.select(posts::title);
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 3 redundant requirements hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:58:18
   |
58 |     let _ = join.select(posts::title);
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 3 redundant requirements hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:64:18
   |
64 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 4 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:64:18
   |
64 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 4 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:66:31
   |
66 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ----- ^^^^^^^^^^^^^^^^^^^^^^^ expected `Text`, found `Nullable<Text>`
   |                         |
   |                         required by a bound introduced by this call
   |
   = note: expected struct `diesel::sql_types::Text`
              found struct `Nullable<diesel::sql_types::Text>`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
note: required by a bound in `lower`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:33:1
   |
33 | sql_function!(fn lower(x: Text) -> Text);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`
   = note: this error originates in the macro `sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:66:25
   |
66 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Nullable<Text>`, found `Text`
   |
   = note: expected struct `Nullable<diesel::sql_types::Text>`
              found struct `diesel::sql_types::Text`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:75:18
   |
75 |     let _ = join.select(posts::title);
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 3 redundant requirements hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:75:18
   |
75 |     let _ = join.select(posts::title);
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 3 redundant requirements hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:81:18
   |
81 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 4 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:81:18
   |
81 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `users::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 4 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>, pets::table, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, table, LeftOuter>, Grouped<...>>, ..., ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:83:31
   |
83 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ----- ^^^^^^^^^^^^^^^^^^^^^^^ expected `Text`, found `Nullable<Text>`
   |                         |
   |                         required by a bound introduced by this call
   |
   = note: expected struct `diesel::sql_types::Text`
              found struct `Nullable<diesel::sql_types::Text>`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
note: required by a bound in `lower`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:33:1
   |
33 | sql_function!(fn lower(x: Text) -> Text);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`
   = note: this error originates in the macro `sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:83:25
   |
83 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Nullable<Text>`, found `Text`
   |
   = note: expected struct `Nullable<diesel::sql_types::Text>`
              found struct `diesel::sql_types::Text`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`

error[E0271]: type mismatch resolving `<SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>> as AppearsInFromClause<...>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:90:18
   |
90 |     let _ = join.select(posts::title);
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0277]: Cannot select `posts::columns::title` from `pets::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:90:18
   |
90 |     let _ = join.select(posts::title);
   |                  ^^^^^^ the trait `SelectableExpression<pets::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `pets::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0271]: type mismatch resolving `<SelectStatement<FromClause<JoinOn<Join<table, table, LeftOuter>, Grouped<Eq<Nullable<user_id>, ...>>>>> as AppearsInFromClause<...>>::Count == Never`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:96:18
   |
96 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 2 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0277]: Cannot select `posts::columns::title` from `pets::table`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:96:18
   |
96 |     let _ = join.select(lower(posts::title));
   |                  ^^^^^^ the trait `SelectableExpression<pets::table>` is not implemented for `posts::columns::title`
   |
   = note: `posts::columns::title` is no valid selection for `pets::table`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <posts::columns::title as SelectableExpression<posts::table>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
             <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
             <posts::columns::title as SelectableExpression<Only<posts::table>>>
             <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>>`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
   |
17 |         title -> Text,
   |         ^^^^^
   = note: 2 redundant requirements hidden
   = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:98:31
   |
98 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ----- ^^^^^^^^^^^^^^^^^^^^^^^ expected `Text`, found `Nullable<Text>`
   |                         |
   |                         required by a bound introduced by this call
   |
   = note: expected struct `diesel::sql_types::Text`
              found struct `Nullable<diesel::sql_types::Text>`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
note: required by a bound in `lower`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:33:1
   |
33 | sql_function!(fn lower(x: Text) -> Text);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`
   = note: this error originates in the macro `sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
  --> tests/fail/right_side_of_left_join_requires_nullable.rs:98:25
   |
98 |     let _ = join.select(lower(posts::title.nullable()));
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Nullable<Text>`, found `Text`
   |
   = note: expected struct `Nullable<diesel::sql_types::Text>`
              found struct `diesel::sql_types::Text`
   = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:105:18
    |
105 |     let _ = join.select(posts::title);
    |                  ^^^^^^ expected `Once`, found `Never`
    |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
    |
17  |         title -> Text,
    |         ^^^^^
    = note: 4 redundant requirements hidden
    = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:105:18
    |
105 |     let _ = join.select(posts::title);
    |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
    |
    = note: `posts::columns::title` is no valid selection for `users::table`
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <posts::columns::title as SelectableExpression<posts::table>>
              <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
              <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
              <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
              <posts::columns::title as SelectableExpression<Only<posts::table>>>
              <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
    |
17  |         title -> Text,
    |         ^^^^^
    = note: 4 redundant requirements hidden
    = note: required for `posts::columns::title` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<posts::columns::title>`

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Never`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:111:18
    |
111 |     let _ = join.select(lower(posts::title));
    |                  ^^^^^^ expected `Once`, found `Never`
    |
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
    |
17  |         title -> Text,
    |         ^^^^^
    = note: 5 redundant requirements hidden
    = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0277]: Cannot select `posts::columns::title` from `users::table`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:111:18
    |
111 |     let _ = join.select(lower(posts::title));
    |                  ^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `posts::columns::title`
    |
    = note: `posts::columns::title` is no valid selection for `users::table`
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <posts::columns::title as SelectableExpression<posts::table>>
              <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <posts::columns::title as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
              <posts::columns::title as SelectableExpression<SelectStatement<FromClause<From>>>>
              <posts::columns::title as SelectableExpression<JoinOn<Join, On>>>
              <posts::columns::title as SelectableExpression<Only<posts::table>>>
              <posts::columns::title as SelectableExpression<Tablesample<posts::table, TSM>>>
note: required for `posts::columns::title` to implement `SelectableExpression<query_source::joins::Join<users::table, posts::table, LeftOuter>>`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:17:9
    |
17  |         title -> Text,
    |         ^^^^^
    = note: 5 redundant requirements hidden
    = note: required for `lower::lower<posts::columns::title>` to implement `SelectableExpression<JoinOn<query_source::joins::Join<pets::table, SelectStatement<FromClause<JoinOn<query_source::joins::Join<users::table, posts::table, LeftOuter>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<posts::columns::user_id>, NullableExpression<users::columns::id>>>>>>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<pets::columns::user_id>, NullableExpression<users::columns::id>>>>>`
    = note: required for `SelectStatement<FromClause<JoinOn<Join<table, SelectStatement<FromClause<JoinOn<..., ...>>>, ...>, ...>>>` to implement `SelectDsl<lower::lower<posts::columns::title>>`

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:113:31
    |
113 |     let _ = join.select(lower(posts::title.nullable()));
    |                         ----- ^^^^^^^^^^^^^^^^^^^^^^^ expected `Text`, found `Nullable<Text>`
    |                         |
    |                         required by a bound introduced by this call
    |
    = note: expected struct `diesel::sql_types::Text`
               found struct `Nullable<diesel::sql_types::Text>`
    = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
note: required by a bound in `lower`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:33:1
    |
33  | sql_function!(fn lower(x: Text) -> Text);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`
    = note: this error originates in the macro `sql_function` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Nullable<title> as Expression>::SqlType == Text`
   --> tests/fail/right_side_of_left_join_requires_nullable.rs:113:25
    |
113 |     let _ = join.select(lower(posts::title.nullable()));
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Nullable<Text>`, found `Text`
    |
    = note: expected struct `Nullable<diesel::sql_types::Text>`
               found struct `diesel::sql_types::Text`
    = note: required for `NullableExpression<posts::columns::title>` to implement `AsExpression<diesel::sql_types::Text>`
